<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- Parent -->
	<parent>
		<groupId>org.jboss.arquillian.examples</groupId>
		<artifactId>parent</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<!-- Model Information -->
	<modelVersion>4.0.0</modelVersion>

	<!-- Artifact Information  -->
	<groupId>org.jboss.arquillian.examples</groupId>
	<artifactId>quickstart</artifactId>
	<packaging>war</packaging>
	<name>Arquillian Examples Quickstart</name>
	<description>Simple Arquillian Quickstart Project</description>
	
	<dependencies>
		<!-- CDI (JSR-299) -->
		<dependency>
			<groupId>javax.enterprise</groupId>
			<artifactId>cdi-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- EJB -->
		<dependency>
			<groupId>org.jboss.ejb3</groupId>
			<artifactId>jboss-ejb3-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!--
			Common annotations (e.g., @PostConstruct, @PreDestroy, @Generated,
			@Resource)
		-->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>jsr250-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- Bean Validation (JSR-303) -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- Bean Validation Implementation -->
		<!--
			Provides portable constraints such as @NotEmpty, @Email and @Url
		-->
		<!--
			Hibernate Validator is only the JSR-303 implementation at the moment,
			so we can assume it's provided
		-->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.0.0.GA</version>
			<scope>provided</scope>
		</dependency>
		<!-- JSF -->
		<dependency>
			<groupId>javax.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- JPA -->
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<scope>provided</scope>
		</dependency>

		<!--
			Optional, but highly recommended. <dependency>
			<groupId>org.testng</groupId> <artifactId>testng</artifactId>
			<version>5.10</version> <scope>test</scope>
			<classifier>jdk15</classifier> </dependency>
		-->

		<!-- JUnit -->
<!-- 		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency> -->

		<!-- Needed on JBoss AS as EL is out of date -->
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>el-impl</artifactId>
			<scope>runtime</scope>
			<!-- FIXME this version should be in the Weld API BOM -->
			<version>2.1.2-b04</version>
			<exclusions>
				<exclusion>
					<groupId>javax.el</groupId>
					<artifactId>el-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Arquillian -->
		<!-- <dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-core</artifactId>
			<version>${arquillian.version}</version>
			<scope>test</scope>
		</dependency> -->

		<!--
			<dependency> <groupId>org.jboss.spec</groupId>
			<artifactId>jboss-javaee-6.0</artifactId>
			<version>1.0.0.Beta4</version> <type>pom</type>
			<scope>provided</scope> </dependency>
		-->

		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>jta</artifactId>
			<scope>provided</scope>
			<version>1.1</version>
		</dependency>


	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<!-- Compiler plugin enforces Java 1.6 compatiblity -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<!-- Eclipse plugin can force download of source and JavaDoc jars -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<wtpversion>2.0</wtpversion>
					<!--
						<downloadSources>true</downloadSources>
						<downloadJavadocs>true</downloadJavadocs>
					-->
				</configuration>
			</plugin>

			<!-- Configure the JBoss AS Maven deploy plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jboss-maven-plugin</artifactId>
				<configuration>
					<jbossHome>${jboss.home}</jbossHome>
					<serverName>${jboss.domain}</serverName>
					<fileNames>
						<fileName>${project.build.directory}/${project.build.finalName}.war
						</fileName>
					</fileNames>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>weld-embedded</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-weld-embedded</artifactId>
					<!-- <version>1.0.0.Alpha4</version>-->
					<version>1.0.0-SNAPSHOT</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>jbossas-remote-60</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-jbossas-remote-60</artifactId>
					<!-- <version>1.0.0.Alpha4</version>-->
					<version>1.0.0-SNAPSHOT</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<build>
				<testResources>
					<testResource>
						<directory>src/test/resources</directory>
					</testResource>
					<testResource>
						<directory>src/test/resources-jboss</directory>
					</testResource>
				</testResources>
			</build>
		</profile>
		<!-- recommended to start with this one. default profile -->
		<profile>
			<id>jbossas-managed-6</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
			<dependencies>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-arquillian-container-managed</artifactId>
					<version>7.1.3.Final</version>
				</dependency>
				<dependency>
					<groupId>org.jboss.jbossas</groupId>
					<artifactId>jboss-server-manager</artifactId>
					<version>1.0.3.GA</version>
				</dependency>
				<dependency>
					<groupId>org.jboss.jbossas</groupId>
					<artifactId>jboss-as-client</artifactId>
					<version>6.0.0.Final</version>
					<type>pom</type>
				</dependency>
			</dependencies>
		</profile>

		<!--
			java.lang.NoClassDefFoundError: javax/servlet/http/HttpServlet
			https://jira.jboss.org/browse/ARQ-205
		-->
		<profile>
			<id>jbossas-managed-51</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-jbossas-managed-5.1</artifactId>
					<!-- <version>1.0.0.Alpha4</version>-->
					<version>1.0.0-SNAPSHOT</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>glassfish-remote-3</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-glassfish-remote-3</artifactId>
					<version>1.0.0-SNAPSHOT</version>
					<!--					<version>1.0.0.Alpha4</version>-->
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.glassfish.deployment</groupId>
					<artifactId>deployment-client</artifactId>
					<version>3.0.1-b19</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>glassfish-embedded-3</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-glassfish-embedded-3</artifactId>
					<!-- <version>1.0.0.Alpha4</version>-->
					<version>1.0.0-SNAPSHOT</version>
				</dependency>
				<dependency>
					<groupId>org.glassfish.extras</groupId>
					<artifactId>glassfish-embedded-all</artifactId>
					<version>3.0.1-b02</version>
				</dependency>
			</dependencies>
		</profile>
		
		<profile>
			<id>wildfy81-embedded</id>
			<!-- the dependencies for Wildfly8.1 -->
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-arquillian-container-embedded</artifactId>
					<version>${wildfly.version}</version>
				</dependency>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-embedded</artifactId>
					<version>${wildfly.version}</version>
				</dependency>
			</dependencies>

			<build>
				<plugins>
					<!-- You need the maven dependency plugin to download locally a zip 
						with the server, unless you provide your own, it will download under the 
						/target directory -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>2.8</version>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.wildfly</groupId>
											<artifactId>wildfly-dist</artifactId>
											<version>${wildfly.version}</version>
											<type>zip</type>
											<overWrite>false</overWrite>
											<outputDirectory>target</outputDirectory>
										</artifactItem>
									</artifactItems>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<!-- Fork every test because it will launch a separate AS instance -->
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx128m -XX:MaxPermSize=128m</argLine>
							<systemPropertyVariables>
								<arquillian.launch>wildfly-8.1.0</arquillian.launch>
								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
								<jboss.home>target/wildfly-${wildfly.version}</jboss.home>
								<module.path>target/wildfly-${wildfly.version}/modules</module.path>
								<jboss.socket.binding.port-offset>200</jboss.socket.binding.port-offset>
							</systemPropertyVariables>

							<redirectTestOutputToFile>false</redirectTestOutputToFile>

						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.wildfly.plugins</groupId>
						<artifactId>wildfly-maven-plugin</artifactId>
						<version>1.0.2.Final</version>
						<configuration>
							<jboss-home>target/wildfly-${wildfly.version}</jboss-home>
							<jvmArgs>-Xmx256m -XX:MaxPermSize=128m</jvmArgs>
							<modules-path>
								<paths>
									<path>target/wildfly-${wildfly.version}/modules</path>
								</paths>
							</modules-path>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
